Bug 1739622 [Linux] Create wider corner resizers for nsWindow::CheckResizerEdge() and restrict edge resize on Wayland r=emilio

- Create corner resizers larger to perform corner resize more comfortable
- Don't allow to grip West/North edges for resize on Wayland & windows with fixed aspect ratio. We can't resize such windows this way.

Differential Revision: https://phabricator.services.mozilla.com/D191758